# OtusCppDevProfProject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Presentation/: VelPresentCppPro.pptx
include/: BaseTreeBuilder.h  ColorManager.h  CommandLineParser.h  DepthViewTreeBuilder.h  FileSystem.h  FilteredTreeBuilder.h  GitHubTreeBuilder.h  HelpPrinter.h  ITreeBuilder.h  JSONTreeBuilder.h  StatisticsPrinter.h  TreeBuilder.h  constants.h
src/: BaseTreeBuilder.cpp  ColorManager.cpp  CommandLineParser.cpp  Constants.h  DepthViewTreeBuilder.cpp  DepthViewTreeBuilder.h  FileSystem.cpp  FileSystem.h  FilteredTreeBuilder.cpp  FilteredTreeBuilder.h  GitHubTreeBuilder.cpp  GitHubTreeBuilder.h  HelpPrinter.cpp  ITreeBuilder.cpp  JSONTreeBuilder.cpp  JSONTreeBuilder.h  MultiThreadedTreeBuilder.h  StatisticsPrinter.cpp  TreeBuilder.cpp  TreeBuilder.h  TreeBuilderFactory.cpp  TreeBuilderFactory.h  main.cpp
src/builders/: CMakeLists.txt  DepthViewTreeBuilder.cpp  DepthViewTreeBuilder.h  FilteredTreeBuilder.cpp  FilteredTreeBuilder.h  JSONTreeBuilder.cpp  JSONTreeBuilder.h  MultiThreadedTreeBuilder.cpp  MultiThreadedTreeBuilder.h
src/cli/: BuilderFactory.cpp  BuilderFactory.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  OutputManager.cpp  OutputManager.h
src/core/: CMakeLists.txt  ColorManager.h  Constants.h  FileSystem.cpp  FileSystem.h  TreeBuilder.cpp  TreeBuilder.h
tests/: CMakeLists.txt
